--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,15 @@
 
   <body>
     <header class="row">
+      <div class="col-3">
+        LOGO
+      </div>
+      <div class="col-4">
+        Splurting out unsolicited advice about entrepreneurship since 2016
+      </div>
     </header>
+
     <%= yield %>
+
   </body>
 </html>
