--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,5 +1,9 @@
 /*
 @import "bootstrap";
+
+.clear {
+	clear: both;
+}
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
