--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,12 @@
       <div class="col-4">
         Splurting out unsolicited advice about entrepreneurship since 2016
       </div>
+      <div class="col-5">
+        <%= link_to 'Contribute', '#' %>
+        <%= link_to 'About', '#' %>
     </header>
+
+    <br class="clear" />
 
     <%= yield %>
 
