--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -15,7 +15,7 @@
 
 <div class="row">
 	<div class="col-12 col-sm-4">
-		<%= image_tag 'me.jpg', class: 'img-fluid' %>
+		<%= image_tag 'IMG_0350.JPG', class: 'img-fluid' %>
 	</div>
 
 	<div class="col-12 col-sm-7 offset-sm-1">
