--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,7 +85,7 @@
            <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
           </div>
           <div class="col-12 col-sm-6 footer-blurb">
-            Proudly hacked by <a href="seanoneil4.com">[Sean O'Neil]</a><br />
+            Proudly hacked by <a href="https://seanoneil4.com">[Sean O'Neil]</a><br />
             Want to build your own Splurty Web App - <a href="https://online.bootcampspot.com">Learn how to code here</a>
           </div>
         </div>
