--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -54,7 +54,7 @@
 	}
 
 	h1 {
-	  font-family: 'kaushan_scriptregular', sans-serif;
+	  font-family: 'kaushan_scriptregular';
 	  font-weight: bold;
 	  font-size: 48px;
 	  
